[gd_scene load_steps=5 format=3 uid="uid://cy7pri7s6t6ac"]

[ext_resource type="Theme" uid="uid://bgvchk3m4xn3h" path="res://Themes/menu_button_theme.tres" id="1_8h7l3"]
[ext_resource type="Script" path="res://Scripts/UI/death_menu.gd" id="1_i5tdt"]

[sub_resource type="Gradient" id="Gradient_id7hr"]
offsets = PackedFloat32Array(0, 0.990338)
colors = PackedColorArray(0.397201, 0.241243, 0.154946, 1, 0.152965, 0.0683859, 0.0684181, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i1vg6"]
gradient = SubResource("Gradient_id7hr")
width = 500
height = 500
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.1)
metadata/_snap_enabled = true

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i5tdt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.5
offset_top = -167.34
offset_right = 160.5
offset_bottom = -71.34
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
text = "You Died!"

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_i1vg6")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -10.0
offset_right = 109.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="RespawnButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_8h7l3")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 35
text = "Respawn"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_8h7l3")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 35
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
